<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CoordActivityFragments.ButtonPointFragment">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/btKIP"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/kip"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/btRiver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btKontPoint"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/kt"
        android:autoSizeTextType="uniform"
        app:layout_constraintStart_toEndOf="@+id/btKIP"
        app:layout_constraintBottom_toBottomOf="@+id/btKIP"
        app:layout_constraintTop_toTopOf="@+id/btKIP"
        app:layout_constraintEnd_toStartOf="@+id/btAD"
        />


    <Button
        android:id="@+id/btAD"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/ad"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/btKontPoint"
        app:layout_constraintTop_toTopOf="@+id/btKontPoint"
        app:layout_constraintEnd_toStartOf="@+id/btRiver"
        app:layout_constraintStart_toEndOf="@+id/btKontPoint"
        />

    <Button
        android:id="@+id/btRiver"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/river"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/btAD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btAD"
        />

    <Button
        android:id="@+id/btKmIndicator"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:text="@string/km_indicator"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/btDamageIp"
        app:layout_constraintTop_toTopOf="@+id/btDamageIp"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btLnearCrane"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/linear_crane"
        android:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btKontPoint"
        />


    <Button
        android:id="@+id/btAngleRotation"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/angle_rotation"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/btLnearCrane"
        app:layout_constraintTop_toTopOf="@+id/btLnearCrane"
        app:layout_constraintEnd_toStartOf="@+id/btLnearCrane"
        app:layout_constraintStart_toEndOf="@+id/btDamageIp"
        />

    <Button
        android:id="@+id/btDamageIp"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/damage_Ip"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/btAngleRotation"
        app:layout_constraintTop_toTopOf="@+id/btAngleRotation"
        app:layout_constraintEnd_toStartOf="@+id/btAngleRotation"
        app:layout_constraintStart_toEndOf="@+id/btKmIndicator"
        />

    <Button
        android:id="@+id/btKIPtoAD"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:text="@string/KIPtoAD"
        android:autoSizeTextType="uniform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btKmIndicator"
        />

    <Button
        android:id="@+id/btKIPafterAD"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/KIPafterAD"
        android:textSize="9sp"
        app:layout_constraintBottom_toBottomOf="@+id/btKIPtoAD"
        app:layout_constraintTop_toTopOf="@+id/btKIPtoAD"
        app:layout_constraintStart_toEndOf="@+id/btKIPtoAD"
        app:layout_constraintEnd_toStartOf="@+id/btVEI"
        />

    <Button
        android:id="@+id/btVEI"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/VEI"
        android:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/btKIPafterAD"
        app:layout_constraintTop_toTopOf="@+id/btKIPafterAD"
        app:layout_constraintStart_toEndOf="@+id/btKIPafterAD"
        app:layout_constraintEnd_toStartOf="@+id/btCandle"
        />

    <Button
        android:id="@+id/btCandle"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/candle"
        android:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btVEI"
        app:layout_constraintTop_toTopOf="@+id/btVEI"
        />

</androidx.constraintlayout.widget.ConstraintLayout>