<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/list"
        android:title="@string/list"
        android:icon="@drawable/ic_baseline_list_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/upload"
        android:title="@string/upload"
        android:icon="@drawable/ic_baseline_cloud_upload_24"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/save"
        android:title="@string/save"
        android:icon="@drawable/ic_baseline_save_24"
        app:showAsAction="ifRoom"
        />
</menu>