<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="visible">

    <androidx.cardview.widget.CardView
        android:id="@+id/cdKoordinate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"


        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="135dp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="35dp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNameSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/name_set"
                app:layout_constraintBottom_toBottomOf="@+id/tvName"
                app:layout_constraintStart_toEndOf="@+id/tvName"
                app:layout_constraintTop_toTopOf="@+id/tvName"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvNKIP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/id_set"
                app:layout_constraintBottom_toBottomOf="@+id/tvName"
                app:layout_constraintStart_toEndOf="@+id/tvNameSet"
                app:layout_constraintTop_toTopOf="@+id/tvName"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tvOperKM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/oper_km_set"
                app:layout_constraintBottom_toBottomOf="@+id/tvName"
                app:layout_constraintStart_toEndOf="@+id/tvNKIP"
                app:layout_constraintTop_toTopOf="@+id/tvName"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvNumListKipSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:text="@string/id_set"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvUpp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="56dp"
                android:text="@string/upp"
                app:layout_constraintBottom_toBottomOf="@+id/tvUts"
                app:layout_constraintEnd_toStartOf="@+id/tvUppSet"
                app:layout_constraintTop_toTopOf="@+id/tvUtsSet"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvUppSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/upp_set"
                app:layout_constraintBottom_toBottomOf="@+id/tvUpp"
                app:layout_constraintStart_toEndOf="@+id/tvUpp"
                app:layout_constraintTop_toTopOf="@+id/tvUpp"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvDepth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/depth"
                app:layout_constraintStart_toStartOf="@+id/tvUts"
                app:layout_constraintTop_toBottomOf="@+id/tvUts" />

            <TextView
                android:id="@+id/tvDepthSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/depth_set"
                app:layout_constraintBottom_toBottomOf="@+id/tvDepth"
                app:layout_constraintStart_toStartOf="@+id/tvUtsSet"
                app:layout_constraintTop_toTopOf="@+id/tvDepth"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/current"
                app:layout_constraintBottom_toBottomOf="@+id/tvDepth"
                app:layout_constraintEnd_toStartOf="@+id/tvCurrentSet"
                app:layout_constraintTop_toTopOf="@+id/tvDepth" />

            <TextView
                android:id="@+id/tvCurrentSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:text="@string/current_set"
                app:layout_constraintBottom_toBottomOf="@+id/tvCurrent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/tvUppSet"
                app:layout_constraintTop_toTopOf="@+id/tvCurrent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tvAccuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/accuracy"
                app:layout_constraintEnd_toEndOf="@+id/tvUpp"
                app:layout_constraintTop_toBottomOf="@+id/tvCurrent" />

            <TextView
                android:id="@+id/tvAccuracySet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accuracy_set"
                app:layout_constraintStart_toStartOf="@+id/tvCurrentSet"
                app:layout_constraintTop_toTopOf="@+id/tvAccuracy" />

            <TextView
                android:id="@+id/tvDistanceSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="000"
                app:layout_constraintStart_toStartOf="@+id/tvUtsSet"
                app:layout_constraintTop_toTopOf="@+id/tvDistance" />

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="Расстояние, м:"
                app:layout_constraintStart_toStartOf="@+id/tvDepth"
                app:layout_constraintTop_toBottomOf="@+id/tvDepth" />

            <TextView
                android:id="@+id/tvUtsSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:text="@string/uts_set"
                app:layout_constraintBottom_toBottomOf="@+id/tvUts"
                app:layout_constraintStart_toEndOf="@+id/tvUts"
                app:layout_constraintTop_toTopOf="@+id/tvUts"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/button_Del"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_baseline_delete_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvNumListKipSet" />

            <ImageButton
                android:id="@+id/button_To_Map"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="70dp"
                android:src="@android:drawable/ic_menu_mapmode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvNumListKipSet" />

            <TextView
                android:id="@+id/tvUts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/uts"
                app:layout_constraintStart_toStartOf="@+id/tvName"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>